--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <img src="pic.JPG" alt="My Picture" height=100> <br>
 	
-     	Till now he acquired knowledge useful for the communication but now he wanted to explore the software integrated in the applications too. 
+     	Till now he acquired knowledge useful for the communication but now he want to explore the software integrated in the applications too. 
 	    As part of his interest for computer sciences, he learnt Java and Object Oriented Programming and was surprised by the major role that java 
 	    plays in the computer applications. Knowing about the Apache subversion a software versioning and revision control system added his interest. 
         When not teaching and experimenting with programming languages and libraries, he enjoys participating in sports
