--- a/inter.html
+++ b/inter.html
@@ -31,7 +31,7 @@
           <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Contact.html">Contact</a>
+          <a class="nav-link active" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="inter.html">Feet to meter validation</a>
