--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <li class="nav-item">
           <a class="nav-link active" href="inter.html">Feet to meter validation</a>
         </li>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="qunit.html">QUnit Test</a>
+        </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
