--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h2>HOBBIES</h2>
         
 
-        <img src="pic.JPG" alt="My Picture" height=100> <br>
+        <img id="vi" src="pic.JPG" alt="My Picture" height=100> <br>
 	
      	Till now he acquired knowledge useful for the communication but now he want to explore the software integrated in the applications too. 
 	    As part of his interest for computer sciences, he learnt Java and Object Oriented Programming and was surprised by the major role that java 
