--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,17 @@
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Check me out</label>
                   </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                  <button type="submit" class="btn btn-primary">Submit</button><br>
+                  <br>
+                  <br>
+
+
+                  
                
                 </form>
+                <br>
+                <br>
+
                 <footer class="container-fluid">
                     &copy; Feb 2019 Manoj
                   </footer>
@@ -82,6 +90,7 @@
     crossorigin="anonymous"></script>
 
   <script  src="scripts/case.js"></script>
+  <script src="C:\Users\S534885\Documents\44563\aboutme\p3.js"></script>
   
 </body>
 </html>
