--- a/inter.html
+++ b/inter.html
@@ -105,6 +105,11 @@
 <br>
 <br>
 
+<button onclick ="createItem()"> Set local storage item!!!! </button>
+<button onclick="readValue()"> Get  the item value!!!! </button>
+<p id="mo"></p>
+
+
 
 <footer class="container-fluid">
   &copy; Feb 2019 Manoj
